2013-08-10  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Line.pm, Texinfo/Convert/Paragraph.pm: preserve 
	spaces coming from the document.
	Do not break words at non-breaking spaces.
	* Pod-Simple-Texinfo/t/Pod-Simple-Texinfo.t: correctly close =over
	with a =back, as reported by newer Pod::Simple.  Report by Karl.

2013-08-09  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/DocBook.pm(_protect_text): convert
	formfeed to space instead of simply removing it.

2013-08-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\codedashfinish): include an explicit
	space after the \let=, for @code{- a}.
	Report from Vincent Lefevre, 7 Aug 2013 04:07:10.

2013-08-08  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm: output ^L in ignorable
	spaces.

2013-08-07  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm(_default_protect_text), 
	tp/init/html32.pm: protect ^L with an entity.
	* tp/Texinfo/Convert/Plaintext.pm: output ^L between 
	paragraphs.

2013-08-06  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/TexinfoXML.pm(_xml_attributes):
	do not protect \f and \ in spaces or trailingspaces attributes.
	* tp/Texinfo/Convert/DocBook.pm(_protect_text): remove
	form-feed from output, as it is not allowed in XML.

2013-08-06  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm: keep form-feed in @set value.
	* util/texinfo.dtd, util/txixml2texi.pl, 
	tp/Texinfo/Convert/TexinfoXML.pm(_protect_text): output form-feed
	as entity in XML, when possible.  Handle form-feeds in 
	txixml2texi.pl too.
	* tp/Texinfo/Convert/TexinfoXML.pm(_xml_attributes),
	util/texinfo.dtd, util/txixml2texi.pl: protect form-feed in
	attributes by using an entity that becomes a literal \f. 
	Double \ in attributes too.

2013-08-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\smartitaliccorrection): also omit italic
	correction if next command is @. or @comma.
	Report from Vincent Lefevre, 5 Aug 2013 02:47:31.
