@@ -5,6 +5,8 @@
 	Do not break words at non-breaking spaces.
 	* Pod-Simple-Texinfo/t/Pod-Simple-Texinfo.t: correctly close =over
 	with a =back, as reported by newer Pod::Simple.  Report by Karl.
+	Mark as TODO the test that changes depending on Pod::Simple version.
+	Report by Karl.
 
 2013-08-09  Patrice Dumas  <pertusus@free.fr>
 
